Fixed map not showing in mobile view

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -265,7 +265,7 @@ body {
 
 .map-container {
   width: 100%;
-  height: 100%;
+  height: 93.8vh;
   
   position: absolute;
   top: 0;
